tests/testdata/weekly/fortiolb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortiolb
  namespace: raw
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  - port: 8079
    name: grpc-ping
  selector:
    app: echosrv
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3lb
  namespace: raw
spec:
  type: LoadBalancer
  ports:
  - port: 5201
    name: tcp
  selector:
    app: iperf3-raw
