tests/testdata/weekly/iperf3.yaml

apiVersion: v1
kind: Service
metadata:
  name: iperf3-raw
  labels:
    app: iperf3-raw
spec:
  ports:
  - name: tcp
    port: 5201
  selector:
    app: iperf3-raw
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iperf3-raw
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: iperf3-raw
    spec:
      containers:
      - image: docker.io/networkstatic/iperf3
        imagePullPolicy: IfNotPresent
        name: iperf3-raw
        ports:
        - containerPort: 5201
        args:
        - '-s'
        resources:
          requests:
            cpu: 1000m
            memory: "1G"
          limits:
            cpu: 1000m
            memory: "2G"
