tests/testdata/weekly/istio08.yaml
# kubectl apply -n istio-system ...

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio08-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prom.v08.istio.webinf.info"
    - "grafana.v08.istio.webinf.info"
    - "pilot.v08.istio.webinf.info"
    - "fortio.v08.istio.webinf.info"
    - "fortio2.v08.istio.webinf.info"
    - "fortioraw.v08.istio.webinf.info"
    - "bookinfo.v08.istio.webinf.info"
    - "httpbin.v08.istio.webinf.info"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot
spec:
  hosts:
  - "pilot.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: istio-pilot.istio-system.svc.cluster.local
        port:
          number: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: httpbin.test.svc.cluster.local
        port:
          number: 8000
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prom
spec:
  hosts:
  - "prom.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookinfo.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
spec:
  hosts:
  - "fortioraw.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: echosrv.raw.svc.cluster.local
        port:
          number: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortioistio
spec:
  hosts:
  - "fortio.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: echosrv.test.svc.cluster.local
        port:
          number: 8080


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio2istio
spec:
  hosts:
  - "fortio2.v08.istio.webinf.info"
  gateways:
  - istio08-gateway
  http:
  - route:
    - destination:
        host: echosrv2.test.svc.cluster.local
        port:
          number: 8080
